[project]
name = "wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pytest>=8.3.5",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["C4", "F", "G", "I", "PTH", "RUF", "SIM", "TC", "UP", "W", "PERF"]
ignore = ["F401", "F402", "F403", "F405", "PERF203", "RUF001", "RUF009", "RUF022", "RUF023", "SIM105", "UP034", "UP038"]
[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportSelfClsParameterName = "none"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedNamedTuple = "error"
reportImplicitStringConcatenation = "error"
reportOverlappingOverload = "error"
reportMissingTypeArgument = "error"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
reportMissingImports = "error"
reportUnusedImport = "error"
reportFunctionMemberAccess = "warning"
reportDuplicateImport = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnknownParameterType = "error"
reportUnknownReturnType = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportShadowedImports = "none"
reportPrivateImportUsage = false
deprecateTypingAliases = true
enableExperimentalFeatures = true
